# trace-rag-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/agents/: design-agent.md  testing-specialist.agent.md
.github/workflows/: lint-commits.yaml
docs/: CONTRIBUTING.md  GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CostOptimizationPanel.tsx  GenerationResultPanel.tsx  TelemetryCard.tsx
frontend/src/hooks/: useIngestionEngine.ts  useQueryEngine.ts  useTelemetry.ts
frontend/src/models/: types.ts
frontend/src/views/: IngestionView.tsx  QueryView.tsx  TokenUsageView.tsx
src/: main.py
src/api/: models.py  routes.py
src/api/templates/: index.html
src/config/: __init__.py  logger.py  settings.py
src/database/: chroma_manager.py
src/embedding/: __init__.py  gemini.py
src/generation/: engine.py
src/ingestion/: __init__.py  chunker.py  crawler.py
tests/: test_chunker.py  test_gemini.py  test_settings.py
