[project]
name = "trace-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.3.14",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]
