[project]
name = "trace-rag-pipeline"
version = "0.1.0"
description = "Prototype RAG ingestion pipeline with crawling, chunking, and Gemini embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.12.1",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.14",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "chromadb>=0.4.24",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
