[project]
name = "trace-rag-pipeline"
version = "0.1.0"
description = "Prototype RAG ingestion pipeline with crawling, chunking, and Gemini embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.12.1",
    "langchain>=0.3.14",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "chromadb>=0.4.24",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "structlog>=26.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-community>=0.4.2",
    "rank-bm25>=0.2.2",
    "langchain-chroma>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
